# tride

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  EXTENSIONS_PLAN.md  LICENSE  PLAN.md  README.md  build.bat  dev.bat  index.html  package-lock.json  package.json  run.bat
claude-sidecar/: index.ts  package.json
src/: App.tsx  claudeBuffer.ts  debugLog.ts  main.tsx  ptyBuffer.ts  shiki.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  fs.rs  git.rs  lib.rs  lsp.rs  main.rs  pty.rs
src/components/: ActionBar.tsx  BrowserPanel.tsx  ClaudePane.tsx  CodeEditor.tsx  DiffViewer.tsx  FileTree.tsx  GitPanel.tsx  GroupTabs.tsx  ImagePreview.tsx  LlmPane.tsx  LlmPaneStartScreen.tsx  LlmPanes.tsx  PanesBroadcastBar.tsx  ProjectTabs.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  SourceControl.tsx  TerminalDrawer.tsx  TerminalGrid.tsx  TerminalPane.tsx  TerminalTabs.tsx  TitleBar.tsx  TodoPanel.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  Markdown.tsx  ThinkingBlock.tsx  (+1 more)
src/hooks/: useClaudeSession.ts  useClaudeTerminal.ts  useGlobalClaudeListener.ts  useLsp.ts  useTabDrag.ts  useTabOverflow.ts  useTerminal.ts
src/marketing/: index.html  package.json
src/state/: context.tsx  localStorage.ts  reducer.ts  session.ts
src/utils/: llmCommand.ts  modelUtils.ts  paneUtils.ts  platform.ts  toolIcons.tsx
theia-ide/: build-log.txt  build.bat  gen-webpack.config.js  gen-webpack.node.config.js  package-lock.json  package.json  rebuild-cacerts.bat
(+2 files in other folders)
