[package]
name = "ai-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "ai_terminal_lib"
crate-type = ["lib", "cdylib", "staticlib"]
